--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# ------------------------------
+# Application specific
+# ------------------------------
 build/
 views/static/
 log_*
@@ -11,5 +14,21 @@ rtl_daq
 rtl_sdr_join
 sim
 sync
-__pycache__
 *.save
+
+# ------------------------------
+# OS generated files
+# ------------------------------
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# ------------------------------
+# Python
+# ------------------------------
+__pycache__
+*.pyc
